[FIX] overflow prompteur

--- a/styles/skins/xgproyect/formate.css
+++ b/styles/skins/xgproyect/formate.css
@@ -580,4 +580,5 @@ h1
 
 #prompteur{
   margin-bottom: 4px;
+  overflow: hidden;
 }
